# ElectronicFocuser

./: .gitignore  README.md  ToDo.txt
Documents/: Focuser&MotorData.xlsx  FocuserSpeeds.ods  Info.txt  StepperMotorDriversPinout.xlsx  StepperMotorParameters.xlsx
Drivers/INDI/64/indi-regulusfocuser/: CMakeLists.txt  FocuserDefinitions.h  regulusfocuser.cpp  regulusfocuser.h
ElectronicFocuser-STM32/src/: FocuserStepper.cpp  ModbusRtu.cpp  ModbusSlave.cpp  ModbusSlave.h
Firmware/ElectronicFocuser-STM32/: platformio.ini
INDI/indi-regulusfocuser/: regulusfocuser.h
MechanicalDesigns-FreeCad/2 inch Crayford Focuser for Schmidt Cassegrain-NewDesign/: CE3_Case-Lid-Body.gcode  CE3_HalfAdapterSwitchHolder-Body.gcode  CE3_MotorHolder-Body.gcode  Case-Lid-Body.stl  Case-Lid.FCStd  Case-Lid.FCStd1  Case-MainPart-Body.stl  Case-MainPart.FCStd1  HalfAdapterMotorHolder.FCStd  HalfAdapterMotorHolder.FCStd1  HalfAdapterSwitchHolder-Body.stl  HalfAdapterSwitchHolder.FCStd  HalfAdapterSwitchHolder.FCStd1  MotorHolder-Body.stl  MotorHolder.FCStd  MotorHolder.FCStd1
MechanicalDesigns-FreeCad/2 inch Crayford Focuser for Schmidt Cassegrain-OldDesign/: AdapterPiece-USB_Focus_Adapter_Kit.FCStd  AdapterPiece-USB_Focus_Adapter_Kit.FCStd1  AdapterPlate-USB_Focus_Adapter_Kit.FCStd  AdapterPlate-USB_Focus_Adapter_Kit.FCStd1  AdapterPlate-USB_Focus_Adapter_Kit1.FCStd  AdapterPlate-USB_Focus_Adapter_Kit1.FCStd1  AdapterPlate-USB_Focus_Adapter_Kit2.FCStd  AdapterPlate-USB_Focus_Adapter_Kit2.FCStd1  AdapterRing.FCStd  AdapterRing.FCStd1  (+9 more)
Schematic&PCB/: 9-pin-D-ConnectorForProgramming.txt
(+178 files in other folders)
